spade-tests/src/snapshots/spade_tests__ast_lowering__duplicate_item_names2.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn a() -> bool {
    true
}
pipeline(0) a(clk: clk) -> bool {
    false
}


error: Multiple items with the same name
  ┌─ testinput:4:13
  │
1 │ fn a() -> bool {
  │    - Previous definition here
  ·
4 │ pipeline(0) a(clk: clk) -> bool {
  │             ^ a is defined multiple times


